an overflow property is set that prevents the content of the span element from overflowing

--- a/html/Balance sheet/styles.css
+++ b/html/Balance sheet/styles.css
@@ -13,4 +13,7 @@ html {
     clip-path: inset(50%);
     width: 1px;
     height: 1px;
+    overflow: hidden;
+    white-space: nowrap;
+  
   }
